pbc index update

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,6 +6,7 @@ project:
 website:
   title: "CCI"
   favicon: images/banner3.png
+  google-analytics: "G-TNGWX5Y7FL"
   page-footer: '<p style="text-align: justify;">*© Центр ценовых индексов 2024. Все права защищены. Любое копирование, перепечатка или последующее распространение информации Центр ценовых индексов, в том числе производимое путем кэширования, кадрирования или использования аналогичных средств, запрещено без предварительного письменного согласия со стороны Центр ценовых индексов.* <br />
 *Центр ценовых индексов не несет ответственности за причинение любого ущерба или убытков, возникших в связи с тем, что лицо полагалось на возможность использования Информации в определенных целях, и исключает любую другую ответственность, возникшую в связи с использованием Информации или связанную с ней.*</p>
 ' 
