--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,13 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: "1.4.550"
+          
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+        
+      - name: Install R packages
+        run: |
+          Rscript -e 'install.packages(c("openxlsx", "highcharter", "tidyr", "xts", "dplyr"), repos="https://cloud.r-project.org")'
 
       - name: Run deploy script
         run: python py/data_deploy.py
