--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,13 +6,18 @@ on:
       - 'data/**'
       - 'py/**'
       - '.github/workflows/**'
+      - '*.qmd'
+  schedule:
+    - cron: '*/30 * * * *'  # каждые 30 минут (UTC)
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      R_LIBS_USER: ${{ github.workspace }}/R/library
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Setup Python
@@ -21,24 +26,45 @@ jobs:
           python-version: '3.11'
 
       - name: Install Python dependencies
+        run: pip install -r requirements.txt
+
+      - name: Install gdown
+        run: pip install gdown
+
+      - name: Download latest Excel from Google Drive
         run: |
-          pip install -r requirements.txt
+          gdown --folder "${{ secrets.DRIVE_FOLDER_ID }}" -O data
+
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Install system dependencies for R packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
+
+      - name: Cache R packages
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: ${{ runner.os }}-r-${{ hashFiles('**/*.R', '**/*.Rmd', '**/*.qmd') }}
+          restore-keys: |
+            ${{ runner.os }}-r-
+
+      - name: Install R packages
+        run: |
+          Rscript -e 'install.packages(c(
+            "zoo", "xts", "TTR", "curl", "quantmod", "highcharter",
+            "openxlsx", "readxl", "dplyr", "tidyr", "ggplot2", "lubridate", "stringr"
+          ), repos = "https://cloud.r-project.org")'
 
       - name: Install Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: "1.4.550"
-          
-      - name: Setup R
-        uses: r-lib/actions/setup-r@v2
-        
-      - name: Install R packages
-        run: |
-          Rscript -e 'install.packages(c("zoo", "TTR", "curl", "quantmod", "openxlsx", "tidyr", "xts", "dplyr", "highcharter"), repos="https://cloud.r-project.org")'
 
       - name: Run deploy script
         run: python py/data_deploy.py
-
         env:
           FTP_HOST: ${{ secrets.FTP_HOST }}
           FTP_USER: ${{ secrets.FTP_USER }}
